added final social icons

--- a/index.html
+++ b/index.html
@@ -404,25 +404,22 @@
 										</div>
 										<!-- end item -->
 
-									<div class="col col--lg-4 col--xl-3">
+										<div class="col col--lg-4 col--xl-3">
 											<div class="__item">
 												<a target="_blank" href="https://twitter.com/01CoinTeam"><img src="img/twitter.png" alt="Twitter" /></a>
 												<p>Twitter</p>
 											</div>
 										</div>
-										<!-- end item -->
+											<!-- end item -->
 
-									<div class="col col--lg-4 col--xl-3">
+										<div class="col col--lg-4 col--xl-3">
 											<div class="__item">
 												<a target="_blank" href="https://bitcointalk.org/index.php?topic=3457534.0"><img src="img/btctalk.png" alt="Bitcoin Talk" /></a>
 												<p>Bitcointalk</p>
 											</div>
 										</div>
 										<!-- end item -->
-									</div>
 
-									<div class="row row--xs-between">
-										<!-- start item -->
 										<div class="col col--lg-4 col--xl-3">
 											<div class="__item">
 												<a href="https://www.facebook.com/01CoinTeam/" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
@@ -443,6 +440,38 @@
 											<div class="__item">
 												<a target="_blank" href="https://t.me/ZOCCoinOfficial"><img src="img/telegram.png" alt="Telegram" /></a>
 												<p>Telegram</p>
+											</div>
+										</div>
+										<!-- end item -->
+
+										<div class="col col--lg-4 col--xl-3">
+											<div class="__item">
+												<a target="_blank" href="https://www.reddit.com/r/01coin/"><img src="img/reddit.png" alt="Reddit" /></a>
+												<p>Reddit</p>
+											</div>
+										</div>
+										<!-- end item -->
+
+										<div class="col col--lg-4 col--xl-3">
+											<div class="__item">
+												<a target="_blank" href="https://github.com/zocteam/zeroonecoin"><img src="img/github.png" alt="Github" /></a>
+												<p>Github</p>
+											</div>
+										</div>
+										<!-- end item -->
+
+										<div class="col col--lg-4 col--xl-3">
+											<div class="__item">
+												<a target="_blank" href="https://medium.com/@01cointeam"><img src="img/medium.png" alt="Medium" /></a>
+												<p>Medium</p>
+											</div>
+										</div>
+										<!-- end item -->
+
+										<div class="col col--lg-4 col--xl-3">
+											<div class="__item">
+												<a target="_blank" href="https://steemit.com/@zeroonecoin"><img src="img/steemit.png" alt="Steemit" /></a>
+												<p>Steemit</p>
 											</div>
 										</div>
 										<!-- end item -->
