--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#about">About</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#news">News</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="https://github.com/zocteam/zeroonecoin/releases">Downloads</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Exchanges</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="https://explorer.01coin.io/">Explorer</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#roadmap">Knowledge Base</a></li>
 						</ul>
@@ -252,7 +252,7 @@
 									<!-- start item -->
 									<div class="accordion-item" id="exchanges">
 										<div class="accordion-toggler">
-											<h4 class="__title h3">Exchanges</h4>
+											<h4 class="__title h3">Where to buy?</h4>
 
 											<i class="circled"></i>
 										</div>
@@ -283,12 +283,6 @@
 														UBIT
 													</a>
                                                 </div>
-												<div>
-													<a href="https://bisq.network">
-														<img class="img-responsive" src="img/bisq.svg" alt="Bisq" />
-														Bisq
-													</a>
-												</div>
 											</div>
 										</article>
 									</div>
