--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 						#need to take out the html spacing and set a size in the menu code.
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#about">About</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#news">News</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="https://github.com/zocteam/zeroonecoin/releases">Downloads</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#downloads">Downloads</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="https://explorer.01coin.io/">Explorer</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
 						</ul>
 					</div>
 				</div>
@@ -231,18 +231,28 @@
 									<!-- end item -->
 
 									<!-- start item -->
-									<div id="roadmap" class="accordion-item">
+									<div id="downloads" class="accordion-item">
 										<div class="accordion-toggler">
-											<h4 class="__title h3">Roadmap</h4>
-
+											<h4 class="__title h3">Download wallet</h4>
 											<i class="circled"></i>
 										</div>
 
 										<article>
 											<div class="__inner">
-												<p>
-													Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.
-													</p>
+												<div class="row" style="text-align: center">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-win64.zip" class="col col--md-4">
+														<img src="img/windows.png" alt="windows"/>
+														<p>Windows</p>
+													</a>
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-osx-unsigned.dmg" class="col col--md-4">
+														<img src="img/macos.png" alt="windows"/>
+														<p>MacOS</p>
+													</a>
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-x86_64-linux-gnu.tar.gz" class="col col--md-4">
+														<img src="img/linux.png" alt="windows"/>
+														<p>Linux</p>
+													</a>
+												</div>
 											</div>
 										</article>
 									</div>
@@ -287,6 +297,31 @@
 									</div>
 									<!-- end item -->
 
+
+									<!-- start item -->
+									<div id="explorers" class="accordion-item">
+										<div class="accordion-toggler">
+											<h4 class="__title h3">Explorers</h4>
+											<i class="circled"></i>
+										</div>
+
+										<article>
+											<div class="__inner">
+												<ul>
+													<li>
+														<a target="_blank" href="https://explorer.01coin.io/">explorer.01coin.io</a>
+													</li>
+													<li>
+														<a target="_blank" href="https://altexplorer.co/coin/zoc">Alt Explorer</a>
+													</li>
+													<li>
+														<a target="_blank" href="https://zoc.ccore.online/">CCore</a>
+													</li>
+												</ul>
+											</div>
+										</article>
+									</div>
+									<!-- end item -->
 
 								</div>
 
