--- a/index.html
+++ b/index.html
@@ -369,14 +369,17 @@
 			<section class="section" id="team">
                 <div class="type2">
                     <div>Owen</div>
+					<span>@OwenRay#1791</span><br/>
 					Technical Lead
                 </div>
                 <div class="type4">
                     <div>Lucas</div>
+					<span>@deadthings#7336</span><br/>
                     Project Manager
                 </div>
                 <div class="type1">
                     <div>Carlos</div>
+					<span>@cmelx#2625</span><br/>
 					Core Developer
                 </div>
                 <div class="type3">
@@ -385,14 +388,17 @@
                 </div>
                 <div class="type5">
                     <div>Evy</div>
+					<span>@Evydder#9342</span><br/>
                     Developer
                 </div>
                 <div class="type4">
-                    <div>Stuart</div>
-                    Developer
+                    <div>Julia</div>
+					<span>@COIN (german)#1581</span><br/>
+                    Community Manager
                 </div>
                 <div class="type6">
                     <div>Jesson</div>
+					<span>@Jesson#7485</span><br/>
                     Designer
                 </div>
 			</section>
