fixed a syntax err and resolved #7

--- a/index.html
+++ b/index.html
@@ -348,20 +348,17 @@
 
 				<div class="grid grid--container">
 
-
-							<!-- start feature -->
-							<div class="facts facts--dark-color  text--center text--sm-left">
-								<div class="__inner" id="masternodeRevenue">
-                                    <h1>ZOC Masternode stats</h1>
-                                    <span>Earn income for supporting the network</span>
-									<span><a target="_blank" href="https://github.com/zocteam/zeroonecoin/blob/master/doc/01KT-MasternodeGuide.pdf">Easy Setup</a></span>
-                                    <span>1K ZOC</span><br/>
-                                </div>
-                            </div>
-							<!-- end feature -->
-						</div>
-					</div>
-				</div>
+                    <!-- start feature -->
+                    <div class="facts facts--dark-color  text--center text--sm-left">
+                        <div class="__inner" id="masternodeRevenue">
+                            <h1>ZOC Masternode stats</h1>
+                            <span>Earn income for supporting the network</span>
+                            <span><a target="_blank" href="https://github.com/zocteam/zeroonecoin/blob/master/doc/01KT-MasternodeGuide.pdf">Easy Setup</a></span>
+                            <span>1K ZOC</span><br/>
+                        </div>
+                    </div>
+                    <!-- end feature -->
+                </div>
 			</section>
 			<!-- end section -->
 
@@ -403,7 +400,7 @@
                 </div>
 			</section>
 			<!-- end section -->
-
+            <img class="img-responsive" src="img/line.png" alt="01coin.io"/>
 			<section class="section" id="news">
 				<div class="grid">
 					<div data-aos="fade-right" data-aos-delay="150" class="aos-init aos-animate">
