--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 						<ul id="top-bar__subnavigation">
 						#need to take out the html spacing and set a size in the menu code.
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="http://kb.01coin.io/">KB</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#about">About</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#news">News</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#downloads">Downloads</a></li>
@@ -113,6 +114,9 @@
 			<span class="scroll-discover hide show--md">scroll down <b></b></span>
 
 		</div>
+		<iframe id="ytplayer" type="text/html" width="100%" height="360"
+				src="https://www.youtube.com/embed/HTMAkn7R6mE?autoplay=1&origin=http://example.com"
+				frameborder="0"></iframe>
 		<!-- end start screen -->
 
 
