improved aesthetics of youtube & team elements, plus some other niggly things

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
 						<ul id="top-bar__subnavigation">
 						#need to take out the html spacing and set a size in the menu code.
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="http://kb.01coin.io/">KB</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#about">About</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#news">News</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#downloads">Downloads</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="http://kb.01coin.io/">Knowledge Base</a></li>
 						</ul>
 					</div>
 				</div>
@@ -114,9 +114,11 @@
 			<span class="scroll-discover hide show--md">scroll down <b></b></span>
 
 		</div>
-		<iframe id="ytplayer" type="text/html" width="100%" height="360"
-				src="https://www.youtube.com/embed/HTMAkn7R6mE?autoplay=1&origin=http://example.com"
-				frameborder="0"></iframe>
+		<div style="padding-top: 20px;">
+		<iframe id="ytplayer" type="text/html" class="youtube" frameborder="0" allowfullscreen 
+				src="https://www.youtube.com/embed/HTMAkn7R6mE?autoplay=0">
+		</iframe>
+		</div>
 		<!-- end start screen -->
 
 
@@ -138,7 +140,7 @@
 							<div class="content-grid" style="margin-left: auto;max-width: 570px;">
 								<div data-aos="fade-right" data-aos-delay="150">
 									<div class="section-heading  col-MB-30 col-MT-30">
-										<h2 class="__title">About 01</h2>
+										<h2 class="__title">About 01coin</h2>
 									</div>
 
 									<p class="col-MB-35">
@@ -368,38 +370,38 @@
 
 			<!-- start section -->
 			<section class="section" id="team">
-                <div class="type2">
+                <div class="type5">
                     <div>Owen</div>
-					<span>@OwenRay#1791</span><br/>
+					<span>@OwenRay</span><br/>
 					Technical Lead
                 </div>
-                <div class="type4">
+                <div class="type1">
                     <div>Lucas</div>
-					<span>@deadthings#7336</span><br/>
+					<span>@deadthings</span><br/>
                     Project Manager
                 </div>
-                <div class="type1">
+                <div class="type2">
                     <div>Carlos</div>
-					<span>@cmelx#2625</span><br/>
+					<span>@cmelx</span><br/>
 					Core Developer
                 </div>
                 <div class="type3">
                     <div>You?</div>
                     Being awesome
                 </div>
-                <div class="type5">
+                <div class="type4">
                     <div>Evy</div>
-					<span>@Evydder#9342</span><br/>
+					<span>@Evydder</span><br/>
                     Developer
                 </div>
-                <div class="type4">
+                <div class="type6">
                     <div>Julia</div>
-					<span>@COIN (german)#1581</span><br/>
+					<span>@COIN (german)</span><br/>
                     Community Manager
                 </div>
-                <div class="type6">
+                <div class="type5">
                     <div>Jesson</div>
-					<span>@Jesson#7485</span><br/>
+					<span>@Jesson</span><br/>
                     Designer
                 </div>
 			</section>
