--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 				<div class="row row--xs-middle">
 					<div class="col col--sm-12 text--lg-center">
 						<div class="__item">
-							<span class="__copy">© 2018, 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
+							<span class="__copy">© 2019 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
 						</div>
 					</div>
 				</div>
