Disable Ubit, add partners, fix line.png scaling at 4k

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#downloads">Downloads</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="http://kb.01coin.io/">Knowledge Base</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#partners">Partners</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li>
 						</ul>
 					</div>
 				</div>
@@ -187,7 +188,7 @@
 				</div>
 			</section>
 			<!-- end section -->
-		<img class="img-responsive" src="img/line.png" alt="01coin.io" />
+		<img width="100%" src="img/line.png" alt="01coin.io" />
 			<!-- start section -->
 			<section class="section">
 				<div class="grid grid--container">
@@ -239,7 +240,7 @@
 									<!-- start item -->
 									<div id="downloads" class="accordion-item">
 										<div class="accordion-toggler">
-											<h4 class="__title h3">Download wallet</h4>
+											<h4 class="__title h3">Download Wallet</h4>
 											<i class="circled"></i>
 										</div>
 
@@ -247,15 +248,15 @@
 											<div class="__inner">
 												<div class="row" style="text-align: center">
 													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-win64.zip" class="col col--md-4">
-														<img src="img/windows.png" alt="windows"/>
+														<img src="img/windows.png" alt="Windows"/>
 														<p>Windows</p>
 													</a>
 													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-osx-unsigned.dmg" class="col col--md-4">
-														<img src="img/macos.png" alt="windows"/>
+														<img src="img/macos.png" alt="MacOS"/>
 														<p>MacOS</p>
 													</a>
 													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-x86_64-linux-gnu.tar.gz" class="col col--md-4">
-														<img src="img/linux.png" alt="windows"/>
+														<img src="img/linux.png" alt="Linux"/>
 														<p>Linux</p>
 													</a>
 												</div>
@@ -267,7 +268,7 @@
 									<!-- start item -->
 									<div class="accordion-item" id="exchanges">
 										<div class="accordion-toggler">
-											<h4 class="__title h3">Where to buy?</h4>
+											<h4 class="__title h3">Where to Buy?</h4>
 
 											<i class="circled"></i>
 										</div>
@@ -275,34 +276,35 @@
 										<article>
 											<div class="__inner cardList">
                                                 <div>
-													<a href="https://graviex.net/markets/zocbtc">
+													<a target="_blank" href="https://graviex.net/markets/zocbtc">
 														<img class="img-responsive" src="img/graviex.png" alt="Graviex" />
 														Graviex
 													</a>
                                                 </div>
                                                 <div>
-													<a href="https://www.cryptaldash.com">
+													<a target="_blank" href="https://www.cryptaldash.com">
 														<img class="img-responsive" src="img/cryptaldash.png" alt="Cryptaldash" />
 														CryptalDash
 													</a>
                                                 </div>
                                                 <div>
-													<a href="https://crex24.com/exchange/ZOC-BTC">
+													<a target="_blank" href="https://crex24.com/exchange/ZOC-BTC">
 														<img class="img-responsive" src="img/crex24.png" alt="Crex 24" />
 														Crex24
 													</a>
                                                 </div>
-                                                <div>
+												<!-- Since Ubit has been down for 2 weeks, we should comment it out for now...
+												<div>
 													<a href="https://ubit.pw/markets/zocbtc">
 														<img class="img-responsive" src="img/ubit.png" alt="UBit" />
 														UBIT
 													</a>
                                                 </div>
+												-->
 											</div>
 										</article>
 									</div>
 									<!-- end item -->
-
 
 									<!-- start item -->
 									<div id="explorers" class="accordion-item">
@@ -324,6 +326,30 @@
 														<a target="_blank" href="https://zoc.ccore.online/">CCore</a>
 													</li>
 												</ul>
+											</div>
+										</article>
+									</div>
+									<!-- end item -->
+
+									<!-- start item -->
+									<div id="partners" class="accordion-item">
+										<div class="accordion-toggler">
+											<h4 class="__title h3">Our Partners</h4>
+											<i class="circled"></i>
+										</div>
+
+										<article>
+											<div class="__inner">
+												<div class="row" style="text-align: center">
+													<a target="_blank" href="https://01VPS.net/" class="col col--md-6">
+														<img src="img/01vps.png" alt="01VPS.net"/>
+														<p>01VPS.net</p>
+													</a>
+													<a target="_blank" href="https://dice-age.com/" class="col col--md-6">
+														<img src="img/dice-age.png" alt="dice-age.com"/>
+														<p>dice-age.com</p>
+													</a>
+												</div>
 											</div>
 										</article>
 									</div>
@@ -406,7 +432,7 @@
                 </div>
 			</section>
 			<!-- end section -->
-            <img class="img-responsive" src="img/line.png" alt="01coin.io"/>
+            <img width="100%" src="img/line.png" alt="01coin.io"/>
 			<section class="section" id="news">
 				<div class="grid">
 					<div data-aos="fade-right" data-aos-delay="150" class="aos-init aos-animate">
