--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
 										<article>
 											<div class="__inner">
 												<div class="row" style="text-align: center">
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-win64.zip" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.5/zeroonecore-0.12.3.5-win64.zip" class="col col--md-4">
 														<img src="img/windows.png" alt="Windows"/>
 														<p>Windows</p>
 													</a>
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-osx-unsigned.dmg" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.5/zeroonecore-0.12.3.5-osx.dmg" class="col col--md-4">
 														<img src="img/macos.png" alt="MacOS"/>
 														<p>MacOS</p>
 													</a>
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.4/zeroonecore-0.12.3-x86_64-linux-gnu.tar.gz" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.5/zeroonecore-0.12.3.5-aarch64-linux-gnu.tar.gz" class="col col--md-4">
 														<img src="img/linux.png" alt="Linux"/>
 														<p>Linux</p>
 													</a>
