--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 														<img src="img/macos.png" alt="MacOS"/>
 														<p>MacOS</p>
 													</a>
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.5/zeroonecore-0.12.3.5-aarch64-linux-gnu.tar.gz" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.5/zeroonecore-0.12.3.5-x86_64-linux-gnu.tar.gz" class="col col--md-4">
 														<img src="img/linux.png" alt="Linux"/>
 														<p>Linux</p>
 													</a>
