Add new Open Chains explorer

--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
 													<li>
 														<a target="_blank" href="https://zoc.ccore.online/">CCore</a>
 													</li>
+													<li>
+														<a target="_blank" href="https://openchains.info/coin/01coin">Open Chains</a>
+													</li>
 												</ul>
 											</div>
 										</article>
