Fix Copyright year and temporarily disable Discord feed

--- a/index.html
+++ b/index.html
@@ -444,7 +444,9 @@
 						<div class="col col--xs-5">
 							<a class="twitter-timeline" data-height="700" data-theme="light" href="https://twitter.com/01CoinTeam?ref_src=twsrc%5Etfw">Tweets by 01CoinTeam</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 						</div>
+						<!-- temporarily disable Discord feed until it can be fixed
 						<iframe class="col col--xs-5" src="https://titanembeds.com/embed/422937820164915201?defaultchannel=426349998675066891&theme=IceWyvern"></iframe>
+						 -->
 					</div>
 				</div>
 			</section>
@@ -564,7 +566,7 @@
 				<div class="row row--xs-middle">
 					<div class="col col--sm-12 text--lg-center">
 						<div class="__item">
-							<span class="__copy">© 2019 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
+							<span class="__copy">© 2020 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
 						</div>
 					</div>
 				</div>
