A small handful of minor tweaks

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#partners">Partners</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li>
+							<!-- Temporarily remove kb link while site remains down
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -106,7 +107,7 @@
                             <sub>The most community-centric project in all of crypto</sub>
                             <br/><br/>
                             <a href="#about" class="round_button" href="">Learn more</a>
-                            <a href="https://discord.gg/wq5xD6M" target="_blank" class="round_button_2" href="">Join our Discord</a>
+                            <a href="https://discord.gg/wq5xD6M" target="_blank" class="round_button_2" href="">Join the Community</a>
 						</div>
 
 				</div>
@@ -436,7 +437,7 @@
 			<section class="section" id="news">
 				<div class="grid">
 					<div data-aos="fade-right" data-aos-delay="150" class="aos-init aos-animate">
-						<div class="section-heading  col-MB-30 col-MT-30">
+						<div class="section-heading section-heading--center  col-MB-30 col-MT-30">
 							<h2 class="__title">News</h2>
 						</div>
 					</div>
