Add Altilly Exchange
Plus some minor exchange logo tweaks

--- a/index.html
+++ b/index.html
@@ -277,24 +277,24 @@
 										<article>
 											<div class="__inner cardList">
                                                 <div>
-													<a target="_blank" href="https://graviex.net/markets/zocbtc">
-														<img class="img-responsive" src="img/graviex.png" alt="Graviex" />
-														Graviex
-													</a>
-                                                </div>
-                                                <div>
-													<a target="_blank" href="https://www.cryptaldash.com">
-														<img class="img-responsive" src="img/cryptaldash.png" alt="Cryptaldash" />
-														CryptalDash
+													<a target="_blank" href="https://www.altilly.com/market/ZOC_BTC">
+														<img class="img-responsive" src="img/altilly-2.png" alt="Altilly" />
+														Altilly
 													</a>
                                                 </div>
                                                 <div>
 													<a target="_blank" href="https://crex24.com/exchange/ZOC-BTC">
-														<img class="img-responsive" src="img/crex24.png" alt="Crex 24" />
+														<img class="img-responsive" src="img/crex24-2.png" alt="Crex 24" />
 														Crex24
 													</a>
                                                 </div>
-												<!-- Since Ubit has been down for 2 weeks, we should comment it out for now...
+												<div>
+													<a target="_blank" href="https://graviex.net/markets/zocbtc">
+														<img class="img-responsive" src="img/graviex-2.png" alt="Graviex" />
+														Graviex
+													</a>
+                                                </div>
+                                                <!-- Since Ubit has been down for 2 weeks, we should comment it out for now...
 												<div>
 													<a href="https://ubit.pw/markets/zocbtc">
 														<img class="img-responsive" src="img/ubit.png" alt="UBit" />
