--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#partners">Partners</a></li>
-							<!-- Temporarily remove kb link while site remains down
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li> -->
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li>
 						</ul>
 					</div>
 				</div>
