--- a/index.html
+++ b/index.html
@@ -316,11 +316,13 @@
 										<article>
 											<div class="__inner">
 												<ul>
+													<!-- commenting out the official explorer while it's non-working...
 													<li>
 														<a target="_blank" href="https://explorer.01coin.io/">explorer.01coin.io</a>
 													</li>
+													-->
 													<li>
-														<a target="_blank" href="https://zoc.ccore.online/">CCore</a>
+														<a target="_blank" href="https://zoc.ccore.online/">CryptoCore</a>
 													</li>
 													<li>
 														<a target="_blank" href="https://openchains.info/coin/01coin">Open Chains</a>
@@ -345,9 +347,9 @@
 														<img src="img/01vps.png" alt="01VPS.net"/>
 														<p>01VPS.net</p>
 													</a>
-													<a target="_blank" href="https://dice-age.com/" class="col col--md-6">
-														<img src="img/dice-age.png" alt="dice-age.com"/>
-														<p>dice-age.com</p>
+													<a target="_blank" href="https://vexpay.top/" class="col col--md-6">
+														<img src="img/vexpay-logo.jpg" alt="Vexpay"/>
+														<p>Vexpay</p>
 													</a>
 												</div>
 											</div>
