--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
 													</a>
                                                 </div>
                                                 <div>
-													<a target="_blank" href="https://www.cryptaldash.com">
-														<img class="img-responsive" src="img/cryptaldash.png" alt="Cryptaldash" />
-														CryptalDash
+													<a target="_blank" href="https://dash.danas.fund/">
+														<img class="img-responsive" src="img/danasfund.png" alt="Danas.Fund" />
+														Danas.Fund
 													</a>
                                                 </div>
                                                 <div>
@@ -347,9 +347,9 @@
 														<img src="img/01vps.png" alt="01VPS.net"/>
 														<p>01VPS.net</p>
 													</a>
-													<a target="_blank" href="https://vexpay.top/" class="col col--md-6">
-														<img src="img/vexpay-logo.jpg" alt="Vexpay"/>
-														<p>Vexpay</p>
+													<a target="_blank" href="https://www.vebit.trade/" class="col col--md-6">
+														<img src="img/vebit.png" alt="Vebit"/>
+														<p>Vebit</p>
 													</a>
 												</div>
 											</div>
