Direct link to ZOC market at danas.fund

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 													</a>
                                                 </div>
                                                 <div>
-													<a target="_blank" href="https://dash.danas.fund/">
+													<a target="_blank" href="https://changer.danas.fund/index.php?parity=BTCZOC">
 														<img class="img-responsive" src="img/danasfund.png" alt="Danas.Fund" />
 														Danas.Fund
 													</a>
