--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                                 </div>
                                                 <div>
                                                     <h3>Block reward</h3>
-													18.35 ZOC
+													15.42 ZOC
                                                 </div>
                                                 <div>
                                                     <h3>Reward distribution</h3>
@@ -247,7 +247,7 @@
 										<article>
 											<div class="__inner">
 												<div class="row" style="text-align: center">
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.7/zeroonecore-0.12.3.7-win64.zip" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.13.0/zeroonecore-0.13.0-win64.zip" class="col col--md-4">
 														<img src="img/windows.png" alt="Windows"/>
 														<p>Windows</p>
 													</a>
@@ -255,7 +255,7 @@
 														<img src="img/macos.png" alt="MacOS"/>
 														<p>MacOS</p>
 													</a>
-													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.12.3.7/zeroonecore-0.12.3.7-x86_64-linux-gnu.tar.gz" class="col col--md-4">
+													<a href="https://github.com/zocteam/zeroonecoin/releases/download/v0.13.0/zeroonecore-0.13.0-x86_64-linux-gnu.tar.gz" class="col col--md-4">
 														<img src="img/linux.png" alt="Linux"/>
 														<p>Linux</p>
 													</a>
@@ -276,28 +276,24 @@
 										<article>
 											<div class="__inner cardList">
                                                 <div>
+													<a target="_blank" href="https://xeggex.com/market/ZOC_USDT">
+														<img class="img-responsive" src="img/xeggex.jpg" alt="XeggeX" />
+														XeggeX
+													</a>
+                                                </div>
+												<!-- Commenting out Graviex since it ceased operations...
+												<div>
 													<a target="_blank" href="https://graviex.net/markets/zocbtc">
 														<img class="img-responsive" src="img/graviex.png" alt="Graviex" />
 														Graviex
 													</a>
                                                 </div>
-                                                <div>
-													<a target="_blank" href="https://changer.danas.fund/index.php?parity=BTCZOC">
-														<img class="img-responsive" src="img/danasfund.png" alt="Danas.Fund" />
-														Danas.Fund
-													</a>
-                                                </div>
-                                                <div>
+												-->
+												<!-- Commenting out Crex24 since it ceased operation...
+												<div>
 													<a target="_blank" href="https://crex24.com/exchange/ZOC-BTC">
 														<img class="img-responsive" src="img/crex24.png" alt="Crex 24" />
 														Crex24
-													</a>
-                                                </div>
-												<!-- Since Ubit has been down for 2 weeks, we should comment it out for now...
-												<div>
-													<a href="https://ubit.pw/markets/zocbtc">
-														<img class="img-responsive" src="img/ubit.png" alt="UBit" />
-														UBIT
 													</a>
                                                 </div>
 												-->
@@ -316,11 +312,9 @@
 										<article>
 											<div class="__inner">
 												<ul>
-													<!-- commenting out the official explorer while it's non-working...
 													<li>
 														<a target="_blank" href="https://explorer.01coin.io/">explorer.01coin.io</a>
 													</li>
-													-->
 													<li>
 														<a target="_blank" href="https://zoc.ccore.online/">CryptoCore</a>
 													</li>
@@ -346,10 +340,6 @@
 													<a target="_blank" href="https://01VPS.net/" class="col col--md-6">
 														<img src="img/01vps.png" alt="01VPS.net"/>
 														<p>01VPS.net</p>
-													</a>
-													<a target="_blank" href="https://www.vebit.trade/" class="col col--md-6">
-														<img src="img/vebit.png" alt="Vebit"/>
-														<p>Vebit</p>
 													</a>
 												</div>
 											</div>
@@ -568,7 +558,7 @@
 				<div class="row row--xs-middle">
 					<div class="col col--sm-12 text--lg-center">
 						<div class="__item">
-							<span class="__copy">© 2023 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
+							<span class="__copy">© 2025 01coin.io | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></span>
 						</div>
 					</div>
 				</div>
