Update exchange and explorer listings
Exchanges: Removed Xeggex and added KlingEx.
Explorers: Removed Cryptocore and commented out OpenChains for the timebeing.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#news">News</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#downloads">Downloads</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#exchanges">Where to buy?</a></li>
-							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorers</a></li>
+							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#explorers">Explorer</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" href="#partners">Partners</a></li>
 							<li><a class="custom-btn custom-btn--small custom-btn--style-3" target="_blank" href="http://kb.01coin.io/">Knowledge Base</a></li>
 						</ul>
@@ -276,9 +276,9 @@
 										<article>
 											<div class="__inner cardList">
                                                 <div>
-													<a target="_blank" href="https://xeggex.com/market/ZOC_USDT">
-														<img class="img-responsive" src="img/xeggex.jpg" alt="XeggeX" />
-														XeggeX
+													<a target="_blank" href="https://klingex.io/trade/ZOC-USDT">
+														<img class="img-responsive" src="img/klingex.png" alt="KlingEx" />
+														KlingEx
 													</a>
                                                 </div>
 												<!-- Commenting out Graviex since it ceased operations...
@@ -305,7 +305,7 @@
 									<!-- start item -->
 									<div id="explorers" class="accordion-item">
 										<div class="accordion-toggler">
-											<h4 class="__title h3">Explorers</h4>
+											<h4 class="__title h3">Explorer</h4>
 											<i class="circled"></i>
 										</div>
 
@@ -313,14 +313,13 @@
 											<div class="__inner">
 												<ul>
 													<li>
-														<a target="_blank" href="https://explorer.01coin.io/">explorer.01coin.io</a>
+														<a target="_blank" href="https://explorer.01coin.io/">Official 01coin Explorer</a>
 													</li>
-													<li>
-														<a target="_blank" href="https://zoc.ccore.online/">CryptoCore</a>
-													</li>
+													<!-- Commenting out OpenChains for now while it is offline...
 													<li>
 														<a target="_blank" href="https://openchains.info/coin/01coin">Open Chains</a>
 													</li>
+													-->
 												</ul>
 											</div>
 										</article>
